# gt_propensity_model

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Laguer_John Victor-gt_propensity-xgboost-multicol.ipynb  Laguer_John Victor-gt_propensity-xgboost-rocauc-remove_feat_low_var.ipynb  Laguer_John Victor-gt_propensity-xgboost-rocauc-remove_feat_low_var_and_multicol.ipynb  Laguer_John Victor-gt_propensity-xgboost-rocauc.ipynb  Laguer_John Victor-gt_propensity-xgboost.ipynb  Laguer_John Victor-sb_fraud_detection-xgboost-reduced_feats.ipynb  Laguer_John Victor-sb_fraud_detection-xgboost-reduced_feats_v2.ipynb  Laguer_John Victor-sb_fraud_detection-xgboost-remove_dupe.ipynb  Laguer_John Victor-sb_fraud_detection-xgboost.ipynb  Laguer_John Victor-scratch.ipynb  laguer_johnvictor-scratch-hyperopt.ipynb
references/: Case Study_Description.docx  GoTyme interview case study.xlsx
sb_fraud_model/: __init__.py  dataset.py  features.py  plots.py
sb_fraud_model/modeling/: predict.py  train.py
