[tool.poetry]
name = "sb-fraud-model"
version = "0.1.0"
description = ""
authors = ["JVL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
scipy = "^1.15.1"
shap = "^0.46.0"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
